--- a/backend/views/download.ejs
+++ b/backend/views/download.ejs
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <img src="/img/logo.png" alt=" logo" class="logo">
+    <img src="../public/css/style.css" alt=" logo" class="logo">
 
     <section class="download">
-        <img class="download__icon" src="/img/download-sd.svg" alt="download">
+        <img class="download__icon" src="../public/img/download-sd.svg" alt="download">
         <% if(locals.error){ %>
         <h4><%= locals.error %> </h4>
         <% } else { %>
