--- a/backend/views/download.ejs
+++ b/backend/views/download.ejs
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="../public/favicon.ico type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShareX-File Sharing Service</title>
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
 
     <section class="download">
-        <img class="download__icon" src="../public/img/download-sd.svg" alt="download">
+        <img class="download__icon" src="/img/download-sd.svg" alt="download">
         <% if(locals.error){ %>
         <h4><%= locals.error %> </h4>
         <% } else { %>
